--- a/mars_data_challenge_part_2.ipynb
+++ b/mars_data_challenge_part_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        " [1867 rows x 7 columns]]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,47 +64,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1867 entries, 0 to 1866\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column            Non-Null Count  Dtype  \n",
-      "---  ------            --------------  -----  \n",
-      " 0   id                1867 non-null   int64  \n",
-      " 1   terrestrial_date  1867 non-null   object \n",
-      " 2   sol               1867 non-null   int64  \n",
-      " 3   ls                1867 non-null   int64  \n",
-      " 4   month             1867 non-null   int64  \n",
-      " 5   min_temp          1867 non-null   float64\n",
-      " 6   pressure          1867 non-null   float64\n",
-      "dtypes: float64(2), int64(4), object(1)\n",
-      "memory usage: 102.2+ KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>terrestrial_date</th>\n",
+       "      <th>sol</th>\n",
+       "      <th>ls</th>\n",
+       "      <th>month</th>\n",
+       "      <th>min_temp</th>\n",
+       "      <th>pressure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2012-08-16</td>\n",
+       "      <td>10</td>\n",
+       "      <td>155</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-75.0</td>\n",
+       "      <td>739.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13</td>\n",
+       "      <td>2012-08-17</td>\n",
+       "      <td>11</td>\n",
+       "      <td>156</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-76.0</td>\n",
+       "      <td>740.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>24</td>\n",
+       "      <td>2012-08-18</td>\n",
+       "      <td>12</td>\n",
+       "      <td>156</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-76.0</td>\n",
+       "      <td>741.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35</td>\n",
+       "      <td>2012-08-19</td>\n",
+       "      <td>13</td>\n",
+       "      <td>157</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-74.0</td>\n",
+       "      <td>732.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>46</td>\n",
+       "      <td>2012-08-20</td>\n",
+       "      <td>14</td>\n",
+       "      <td>157</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-74.0</td>\n",
+       "      <td>740.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id terrestrial_date  sol   ls  month  min_temp  pressure\n",
+       "0   2       2012-08-16   10  155      6     -75.0     739.0\n",
+       "1  13       2012-08-17   11  156      6     -76.0     740.0\n",
+       "2  24       2012-08-18   12  156      6     -76.0     741.0\n",
+       "3  35       2012-08-19   13  157      6     -74.0     732.0\n",
+       "4  46       2012-08-20   14  157      6     -74.0     740.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#mars_df = pd.DataFrame(data, columns =[\"id\", \"terrestrial_date\", \"sol\", \"ls\", \"month\", \"min_temp\", \"pressure\"])\n",
-    "data[0].info()"
+    "mars_df = data[0]\n",
+    "mars_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[0][\"terrestrial_date\"]=pd.to_datetime(data[0][\"terrestrial_date\"], format=\"%Y-%m-%d\")"
+    "mars_df[\"terrestrial_date\"]=pd.to_datetime(mars_df[\"terrestrial_date\"], format=\"%Y-%m-%d\")\n",
+    "mars_df[\"id\"]=mars_df[\"id\"].astype(\"int\")\n",
+    "mars_df[\"sol\"]=mars_df[\"sol\"].astype(\"int\")\n",
+    "mars_df[\"ls\"]=mars_df[\"ls\"].astype(\"int\")\n",
+    "mars_df[\"month\"]=mars_df[\"month\"].astype(\"int\")\n",
+    "mars_df[\"min_temp\"]=mars_df[\"min_temp\"].astype(\"float\")\n",
+    "mars_df[\"pressure\"]=mars_df[\"pressure\"].astype(\"float\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,8 +213,15 @@
     }
    ],
    "source": [
-    "data[0].info()"
+    "mars_df.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
