--- a/mars_data_challenge_part_2.ipynb
+++ b/mars_data_challenge_part_2.ipynb
@@ -519,6 +519,15 @@
     "plt.xlabel(\"Terrestrial Year\")\n",
     "plt.ylabel(\"Temperature\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mars_df.to_csv(\"H:\\\\test1.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
